--- a/pom.xml
+++ b/pom.xml
@@ -13,15 +13,19 @@
     <properties>
         <maven.compiler.release>17</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
         <junit.version>5.10.2</junit.version>
         <slf4j.version>2.0.12</slf4j.version>
         <logback.version>1.5.6</logback.version>
+        <tyrus.version>2.1.3</tyrus.version>
+        <jackson.version>2.17.2</jackson.version>
+        <jakarta.websocket.version>2.1.1</jakarta.websocket.version>
     </properties>
 
     <!-- ===================== DEPENDENCIES ===================== -->
     <dependencies>
 
-        <!-- JUnit 5 -->
+        <!-- ===================== TESTING ===================== -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
@@ -29,18 +33,52 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- SLF4J API -->
+        <!-- ===================== LOGGING ===================== -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
 
-        <!-- Logback implementation -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
+        </dependency>
+
+        <!-- ===================== JSON ===================== -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <!-- ===================== JAKARTA WEBSOCKET API ===================== -->
+        <dependency>
+            <groupId>jakarta.websocket</groupId>
+            <artifactId>jakarta.websocket-api</artifactId>
+            <version>${jakarta.websocket.version}</version>
+        </dependency>
+
+        <!-- ===================== TYRUS SERVER ===================== -->
+        <dependency>
+            <groupId>org.glassfish.tyrus</groupId>
+            <artifactId>tyrus-server</artifactId>
+            <version>${tyrus.version}</version>
+        </dependency>
+
+        <!-- ===================== TYRUS GRIZZLY CONTAINER ===================== -->
+        <dependency>
+            <groupId>org.glassfish.tyrus</groupId>
+            <artifactId>tyrus-container-grizzly-server</artifactId>
+            <version>${tyrus.version}</version>
+        </dependency>
+
+        <!-- Optional: Tyrus Client -->
+        <dependency>
+            <groupId>org.glassfish.tyrus</groupId>
+            <artifactId>tyrus-client</artifactId>
+            <version>${tyrus.version}</version>
         </dependency>
 
     </dependencies>
@@ -69,7 +107,7 @@
                 </configuration>
             </plugin>
 
-            <!-- JUnit 5 runner -->
+            <!-- JUnit 5 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
